--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="17"
-    android:versionName="2.4" >
+    android:versionCode="18"
+    android:versionName="2.5" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:name="com.xoaquin.r07d.DefaultApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -67,10 +68,21 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
+        <receiver android:name="com.xoaquin.r07d.MyCustomReceiver" >
+            <intent-filter>
+                <action android:name="com.xoaquin.r07d.NIVEL" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name="com.xoaquin.r07d.MuroActivity"
             android:label="@string/title_activity_muro" >
+        </activity>
+       
+        <activity
+            android:name="com.xoaquin.r07d.NivelesActivity"
+            android:label="@string/title_activity_niveles"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
     </application>
 
