--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="32"
-    android:versionName="Caleb" >
+    android:versionCode="33"
+    android:versionName="Daniel" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -34,19 +34,14 @@
         </activity>
         <activity
             android:name="com.xoaquin.r07d.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login" 
+            android:configChanges="orientation|keyboardHidden|keyboard">
         </activity>
-        <activity
-            android:name="com.xoaquin.r07d.CalendarioActivity"
-            android:label="@string/title_activity_calendario" >
-        </activity>
-        <activity
-            android:name="com.xoaquin.r07d.RecdiaActivity"
-            android:label="@string/title_activity_recdia" >
-        </activity>
+        
         <activity
             android:name="com.xoaquin.r07d.ReporteActivity"
-            android:label="@string/title_activity_reporte" >
+            android:label="@string/title_activity_reporte" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
         </activity>
         <activity
             android:name="com.xoaquin.r07d.InstActivity"
@@ -58,7 +53,8 @@
         </activity>
         <activity
             android:name="com.xoaquin.r07d.CalendarioActivity2"
-            android:label="@string/title_activity_calendario_activity2" >
+            android:label="@string/title_activity_calendario_activity2" 
+            >
         </activity>
 
         <service android:name="com.parse.PushService" />
@@ -77,7 +73,8 @@
 
         <activity
             android:name="com.xoaquin.r07d.MuroActivity"
-            android:label="@string/title_activity_muro" >
+            android:label="@string/title_activity_muro" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
         </activity>
         <activity
             android:name="com.xoaquin.r07d.NivelesActivity"
@@ -91,12 +88,10 @@
         </activity>
         <activity
             android:name="com.xoaquin.r07d.RecdiaActivity2"
-            android:label="@string/title_activity_recdia_activity2" >
+            android:label="@string/title_activity_recdia_activity2" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
         </activity>
-        <activity
-            android:name="com.xoaquin.r07d.RecdiaActivity3"
-            android:label="@string/title_activity_recdia_activity3" >
-        </activity>
+        
     </application>
 
 </manifest>
