--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="43"
-    android:versionName="Noe" >
+    android:versionCode="44"
+    android:versionName="Oseas" >
 
     <uses-sdk
         android:minSdkVersion="11"
