--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    
+    <permission android:protectionLevel="signature"
+    android:name="com.xoaquin.r07d.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.xoaquin.r07d.permission.C2D_MESSAGE" />
+    
 
     <application
         android:name="com.xoaquin.r07d.DefaultApplication"
@@ -56,19 +63,6 @@
             android:label="@string/title_activity_calendario_activity2" >
         </activity>
 
-        <service android:name="com.parse.PushService" />
-
-        <receiver android:name="com.parse.ParseBroadcastReceiver" >
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-            </intent-filter>
-        </receiver>
-        <receiver android:name="com.xoaquin.r07d.MyCustomReceiver" >
-            <intent-filter>
-                <action android:name="com.xoaquin.r07d.NIVEL" />
-            </intent-filter>
-        </receiver>
 
         <activity
             android:name="com.xoaquin.r07d.MuroActivity"
@@ -96,10 +90,38 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
         
+       
         <meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
+    
+       
+        <receiver android:name="com.xoaquin.r07d.MyCustomReceiver" >
+            <intent-filter>
+                <action android:name="com.xoaquin.r07d.NIVEL" />
+            </intent-filter>
+        </receiver>
         
-        
+      
+      <service android:name="com.parse.PushService" />
+      
+      <receiver android:name="com.parse.ParseBroadcastReceiver">
+            <intent-filter>
+    			<action android:name="android.intent.action.BOOT_COMPLETED" />
+    			<action android:name="android.intent.action.USER_PRESENT" />
+  			</intent-filter>
+      </receiver>
+
+
+      <receiver android:name="com.parse.GcmBroadcastReceiver"
+     	android:permission="com.google.android.c2dm.permission.SEND">
+  			<intent-filter>
+    			<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+    			<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.xoaquin.r07d" />
+            </intent-filter>
+      </receiver>  
+ 
+      
     </application>
 
 </manifest>
