--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="45"
-    android:versionName="Pedro" >
+    android:versionCode="46"
+    android:versionName="Quedorlaomer" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -27,6 +27,7 @@
     <application
         android:name="com.xoaquin.r07d.DefaultApplication"
         android:allowBackup="true"
+        android:backupAgent="MyBackupAgent"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -91,8 +92,13 @@
         </activity>
         
        
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data 
+            android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
+        
+        <meta-data
+            android:name="com.google.android.backup.api_key"
+            android:value="AEdPqrEAAAAIsjmMFvO_szo4XkSnoZBhqHoZ7fssUffDDhghsA" />
     
        
         <receiver android:name="com.xoaquin.r07d.MyCustomReceiver" >
