--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="52"
-    android:versionName="Vanias" >
+    android:versionCode="53"
+    android:versionName="Woe" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -34,7 +34,8 @@
         <activity
             android:name="com.xoaquin.r07d.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -144,7 +145,7 @@
         </receiver> 
         
        <service
-        android:name="WidgetService"
+        android:name=".WidgetService"
         android:exported="false"
         android:permission="android.permission.BIND_REMOTEVIEWS" />
         
