--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="54"
-    android:versionName="Xoaquin" >
+    android:versionCode="55"
+    android:versionName="Yashua" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -34,8 +34,8 @@
         <activity
             android:name="com.xoaquin.r07d.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -98,7 +98,7 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        
+
         <receiver android:name="com.xoaquin.r07d.MyCustomReceiver" >
             <intent-filter>
                 <action android:name="com.xoaquin.r07d.NIVEL" />
@@ -128,29 +128,24 @@
                 <category android:name="com.xoaquin.r07d" />
             </intent-filter>
         </receiver>
+        <receiver
+            android:name="com.xoaquin.r07d.MyWidgetProvider"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/widgettit" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        
-       <receiver
-         android:icon="@drawable/ic_launcher"
-         android:label="@string/widgettit"
-         android:name="MyWidgetProvider" >
-       
-           <intent-filter >
-            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-           </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
 
-          <meta-data
-          android:name="android.appwidget.provider"
-          android:resource="@xml/widget_info" />
-        </receiver> 
-        
-       <service
-        android:name=".WidgetService"
-        android:exported="false"
-        android:permission="android.permission.BIND_REMOTEVIEWS" />
-        
-      
-        
+        <service
+            android:name="com.xoaquin.r07d.WidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
@@ -159,7 +154,11 @@
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" >
         </activity>
-        
+        <activity
+            android:name="com.xoaquin.r07d.NivelesMenuActivity"
+            android:label="@string/title_activity_niveles_menu" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        </activity>
     </application>
 
 </manifest>
