--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="58"
-    android:versionName="Andres" >
+    android:versionCode="59"
+    android:versionName="Bernabe" >
 
     <uses-sdk
         android:minSdkVersion="14"
