REFACTORING + BUG FIXES

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="66"
-    android:versionName="Hageo" >
+    android:versionCode="67"
+    android:versionName="Isaias" >
 
     <uses-sdk
         android:minSdkVersion="14"
