--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:19
+target=Google Inc.:Google APIs (x86 System Image):19
 android.library=false
 android.library.reference.1=google-play-services_lib
 android.library.reference.2=facebook
