--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="75"
-    android:versionName="Noemi" >
+    android:versionCode="76"
+    android:versionName="Otoniel" >
 
     <uses-sdk
         android:minSdkVersion="14"
