DECEMBER SCORE FIXED

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xoaquin.r07d"
-    android:versionCode="85"
-    android:versionName="Vasti" >
+    android:versionCode="86"
+    android:versionName="Zacarias" >
 
     <uses-sdk
         android:minSdkVersion="14"
